Ajustes en primera sección del formulario

--- a/src/core/components/PromoForm/PromoForm.module.scss
+++ b/src/core/components/PromoForm/PromoForm.module.scss
@@ -12,4 +12,8 @@
         @extend .successMessageContainer;
         text-align: left;
     }
+
+    .readOnlyInput input {
+        background-color: #f4f4f4;
+    }
 }
