--- a/src/core/components/MockupFormDialog/MockupForm.css
+++ b/src/core/components/MockupFormDialog/MockupForm.css
@@ -45,9 +45,13 @@
 .ms-Modal-scrollableContent{
     overflow: visible;
 }
-.ms-Dialog-main
+/*.ms-Dialog-main*/
+.mainModal .ms-Dialog-main
 {
-    left: 16px;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1200px !important;
+    min-width: 550px;
 }
 /*Content Section*/
 .statusContainer
