--- a/src/core/components/PromoForm/PromoForm.css
+++ b/src/core/components/PromoForm/PromoForm.css
@@ -253,7 +253,7 @@
 }
 .grayHeader i
 {
-    margin-top: 3px;
+    margin-top: 5px;
     padding-right: 4px !important;
 }
 .actividadTopadaToggle
@@ -315,4 +315,12 @@ flex-basis: 0;
 {
     color: #a4262c !important;
     text-decoration: underline !important;
+}
+.borderBottom
+{
+    border-bottom: 1px solid #707070;
+}
+.workflowIcon{
+    font-size: 25px;
+    padding: 10px;
 }
