--- a/src/extensions/promoListViewLink/components/PromoListViewLink.module.scss
+++ b/src/extensions/promoListViewLink/components/PromoListViewLink.module.scss
@@ -3,4 +3,9 @@
     background-color: "[theme:themePrimary, default:#e5e5e5]";
     display: 'inline-block';
   }
+  .link
+  {
+    font-size: 14px;
+    font-weight: bold;
+  }
 }
